Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110808

Cyclic dependency fails

    XMLWordPrintable

Details

    • 7e51a3fd9 (dev), 4a1458cb7 (6.5)

    Description

      Application exits if there is a cyclic dependency. And the warning message

      QString::arg: Argument missing: Too many dependent imports, My.ModuleA
      QString::arg: Argument missing: "Too many dependent imports" , 1
      QString::arg: Argument missing: "Too many dependent imports" , 0
      QQmlApplicationEngine failed to load component
      qrc:/qt/qml/ImportLoopTest/main.qml:3:1: module "My.ModuleA" version 1.0 cannot be imported because
      module "My.ModuleB" version 1.0 cannot be imported because
      module "My.ModuleA" version 1.0 cannot be imported because
      ...
      

      And this repeats until it stops with Too many dependent imports

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes