Polish error messages for import failures

If you have a loop in your qmldir imports, you get an abhorrent amount
of spam terminating with a misformatted message. Let's limit the total
length of the message and fix the formatting.

Amends commit c7c4c8f088b2c390aaf2e87357d8a1f604ebcdf9.
Amends commit a0290dcc53a14b67c0179c43ce8dc21b43cfc83b.

Fixes: QTBUG-110808
Change-Id: I46fa944eacbca456964d1a98fe029f6d550c0a8c
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 7e51a3fd91f84937adaf45230ff105e2aabfcdbd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>